# mailbot

./: .gitignore  README.md  main.py  messages.py  pyproject.toml
src/: client.py  create.py  utils.py
src/impl/: message.py
src/schemas/: message.py
